--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+asyncpg://postgres:WakamoleMerequetengue@localhost:5432/lynxview_db
+sqlalchemy.url = postgresql+asyncpg://postgres:1234@localhost:5432/lynxview_db
 
 
 [post_write_hooks]
